--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,35 @@
 cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
-project(Projector)
+project(Compressor)
 
 set(Torch_DIR /home/pau1o-hs/Documents/libtorch/share/cmake/Torch)
 
 find_package(Torch REQUIRED)
+find_package(Protobuf REQUIRED)
+
+file(GLOB protos "tensorboard_logger-master/proto/*.proto")
+
+if(NOT PROTOBUF_FOUND)
+    message (FATAL_ERROR "Cannot find Protobuf")
+endif()
+
+file(GLOB sources "tensorboard_logger-master/src/*.cc")
+
+protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${protos})
+
+set(TENSORBOARD_INCLUDE_PATH
+  ${PROJECT_SOURCE_DIR}/include
+  ${PROJECT_BINARY_DIR})
+
+include_directories(
+    ${TENSORBOARD_INCLUDE_PATH}
+    ${Protobuf_INCLUDE_DIRS}
+)
+
+add_library(tensorboard_logger STATIC
+  ${sources}
+  ${PROTO_SRCS}
+)
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp CustomLib.cpp)
@@ -21,3 +47,9 @@ if (MSVC)
                      ${TORCH_DLLS}
                      $<TARGET_FILE_DIR:${PROJECT_NAME}>)
 endif (MSVC)
+
+add_executable(test
+    tensorboard_logger-master/tests/test_tensorboard_logger.cc
+)
+
+target_link_libraries(test tensorboard_logger ${Protobuf_LIBRARIES})
